crates/reap-pm-live/tests/ui/read_only_monitor_has_no_reducer_callback.rs
use reap_pm_live::PmReadOnlyMonitor;

fn inject_callback(root: &mut PmReadOnlyMonitor) {
    root.reduce_private_delivery(|_, _| ());
}

fn main() {}
